--- a/Basic_HTML_template.html
+++ b/Basic_HTML_template.html
@@ -5,5 +5,14 @@
     <script src="Javascript_file.js"></script>
 </head>
 <body>
+    <button onclick="practiceFunction()" id="greenbutton">
+        Click me!
+    </button>
+    <button onclick="dateFunction()">
+        Whats the date?
+    </button>
+    <p id="dateButton">
+
+    </p>
 </body>
 </html>
